--- a/chat.html
+++ b/chat.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Chat | KaKao Clone</title>
     <script src="https://kit.fontawesome.com/4224e6a548.js" crossorigin="anonymous"></script>
 
@@ -14,19 +15,20 @@
         <div class="status-bar__column">
             <span class="status-bar__clock">13:54</span>
         </div>
-        <div class="status-bar__column"></div>
-        <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-mute"></i>
-        <i class="fas fa-wifi"></i>
-        <spane class="status-bar__battery-level">100%</spane>
-        <i class="fas fa-battery-full"></i>
+        <div class="status-bar__column">
+            <i class="fas fa-clock"></i>
+            <i class="fas fa-volume-mute"></i>
+            <i class="fas fa-wifi"></i>
+            <spane class="status-bar__battery-level">100%</spane>
+            <i class="fas fa-battery-full"></i>
+        </div>
     </div>
     <header class="header">
         <div class="header__header-column">
             <a href="index.html" class="header__back-btn">
-                <i class="fas fa-arrow-left fa-2x"></i>
+                <i class="fas fa-arrow-left"></i>
             </a>
-            <h1 class="header_title">Best Friend</h1>
+            <h1 class="header__title">Best Friend</h1>
         </div>
         <div class="header__header-column">
             <span class="header__icon">
