--- a/chat.html
+++ b/chat.html
@@ -45,7 +45,7 @@
         <ul class="chat__messages">
             <span class="chat__timestamp">Friday, January 11, 2019</span>
             <li class="incoming-message message">
-                <img src="image/avata.jpg" class="g-avatar message__avatar" />
+                <img src="image/avata.jpg" class="g-avator message__avatar" />
                 <div class="message__content">
                     <span class="message__author">Best Friend</span>
                     <div class="message__bub">Congrats I love you</div>
