--- a/friends.html
+++ b/friends.html
@@ -38,9 +38,9 @@
             </span>
         </div>
     </header>
-    <main class="frineds">
+    <main class="friends">
         <header class="friends__header">
-            <div class="friends__friend friend friend--lg">
+            <div class="friends__friend friend">
                 <div class="friend__column">
                     <img src="image/avata.jpg" alt="" class="g-avator friends__avator" />
                     <div class="friend__content">
@@ -58,7 +58,7 @@
             <h5 class="friends__title">Plus friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="image/avata.jpg" alt="" class="g-avator friends__avator" />
+                    <img src="image/avata.jpg" alt="" class="friends__avator" />
                     <div class="friend__content">
                         <span class="friend__name">
                             Plus Friend
@@ -69,9 +69,9 @@
         </div>
         <ul class="friends__list">
             <h5 class="friends__title">Friends 14</h5>
-            <li class="friends_friend friend friend--lg">
+            <li class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="image/avata.jpg" alt="" class="g-avator friends__avator" />
+                    <img src="image/avata.jpg" alt="" class="friends__avator" />
                     <div class="friend__content">
                         <span class="friend__name">
                             YangDongyun
@@ -83,8 +83,10 @@
                 </div>
                 <div class="friend__column">
                     <div class="friend__now-listening">
-                        <span>FTISLAND (FT NomadCoders)</span>
-                        <i class="fas fa-play"></i>
+                        <span>
+                            FTISLAND (FT NomadCoders)
+                            <i class="fas fa-play"></i>
+                        </span>
                     </div>
                 </div>
             </li>
@@ -93,23 +95,23 @@
 
     <nav class="nav">
         <ui class="nav__list">
-            <li class="nave__list-item">
-                <a href="friends.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="friends.html" class="nav__list-link">
                     <i class="fas fa-user"></i>
                 </a>
             </li>
-            <li class="nave__list-item">
-                <a href="index.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="index.html" class="nav__list-link">
                     <i class="far fa-comment"></i>
                 </a>
             </li>
-            <li class="nave__list-item">
-                <a href="find.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="find.html" class="nav__list-link">
                     <i class="fas fa-search"></i>
                 </a>
             </li>
-            <li class="nave__list-item">
-                <a href="more.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="more.html" class="nav__list-link">
                     <i class="fas fa-ellipsis-h"></i>
                 </a>
             </li>
