--- a/more.html
+++ b/more.html
@@ -60,33 +60,33 @@
                 <div class="friend__column">
                     <i class="far fa-comment-alt fa-2x"></i>
                 </div>
-                <ul class="more__btn-list">
-                    <li class="more__btn">
-                        <span class="more__btn-icon">
-                            <i class="far fa-smile fa-2x"></i>
-                        </span>
-                        <span class="more__btn-title">
-                            Emoticons
-                        </span>
-                    </li>
-                    <li class="more__btn">
-                        <span class="more__btn-icon">
-                            <i class="fas fa-brush fa-2x"></i>
-                        </span>
-                        <span class="more__btn-title">
-                            Themes
-                        </span>
-                    </li>
-                    <li class="more__btn">
-                        <span class="more__btn-icon">
-                            <i class="fab fa-kickstarter-k fa-2x"></i>
-                        </span>
-                        <span class="more__btn-title">
-                            Account
-                        </span>
-                    </li>
-                </ul>
             </div>
+            <ul class="more__btn-list">
+                <li class="more__btn">
+                    <span class="more__btn-icon">
+                        <i class="far fa-smile fa-2x"></i>
+                    </span>
+                    <span class="more__btn-title">
+                        Emoticons
+                    </span>
+                </li>
+                <li class="more__btn">
+                    <span class="more__btn-icon">
+                        <i class="fas fa-brush fa-2x"></i>
+                    </span>
+                    <span class="more__btn-title">
+                        Themes
+                    </span>
+                </li>
+                <li class="more__btn">
+                    <span class="more__btn-icon">
+                        <i class="fab fa-kickstarter-k fa-2x"></i>
+                    </span>
+                    <span class="more__btn-title">
+                        Account
+                    </span>
+                </li>
+            </ul>
         </header>
         <section class="more__suggestions">
             <h5 class="more__title">Sugesstions</h5>
@@ -114,23 +114,23 @@
     </main>
     <nav class="nav">
         <ui class="nav__list">
-            <li class="nave__list-item">
-                <a href="friends.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="friends.html" class="nav__list-link">
                     <i class="far fa-user"></i>
                 </a>
             </li>
-            <li class="nave__list-item">
-                <a href="index.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="index.html" class="nav__list-link">
                     <i class="far fa-comment"></i>
                 </a>
             </li>
-            <li class="nave__list-item">
-                <a href="find.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="find.html" class="nav__list-link">
                     <i class="fas fa-search"></i>
                 </a>
             </li>
-            <li class="nave__list-item">
-                <a href="more.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="more.html" class="nav__list-link">
                     <i class="fas fa-ellipsis-h"></i>
                 </a>
             </li>
