--- a/find.html
+++ b/find.html
@@ -82,7 +82,7 @@
             </h5>
             <li class="find__friend friend friend--lg">
                 <div class="friend__column">
-                    <img src="image/avata.jpg" alt="" class="g-avator friends__avator" />
+                    <img src="image/avata.jpg" alt="" class="friends__avator" />
                     <div class="friend__content">
                         <span class="friend__name">
                             YangDongyun
@@ -99,23 +99,23 @@
     </main>
     <nav class="nav">
         <ui class="nav__list">
-            <li class="nave__list-item">
-                <a href="friends.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="friends.html" class="nav__list-link">
                     <i class="far fa-user"></i>
                 </a>
             </li>
-            <li class="nave__list-item">
-                <a href="index.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="index.html" class="nav__list-link">
                     <i class="far fa-comment"></i>
                 </a>
             </li>
-            <li class="nave__list-item">
-                <a href="find.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="find.html" class="nav__list-link">
                     <i class="fas fa-search"></i>
                 </a>
             </li>
-            <li class="nave__list-item">
-                <a href="more.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="more.html" class="nav__list-link">
                     <i class="fas fa-ellipsis-h"></i>
                 </a>
             </li>
