--- a/index.html
+++ b/index.html
@@ -45,15 +45,23 @@
         <ul class="chats__list">
             <li class="chats__chat chat">
                 <a href="chat.html">
-                    <div class="chat__column">
-                        <img class="chat__avatar g-avatar" src="image/avata.jpg" />
-                        <div class="chat__content">
-                            <span class="chat__username">Donggyun</span>
-                            <span class="char_preview">Going home</span>
+                    <div class="chats__chat friend friend--lg">
+                        <div class="friend__column">
+                            <img src="image/avata.jpg" alt="" class="m-avator friends__avator" />
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    neulpoom
+                                </span>
+                                <span class="friend__bottom-text">
+                                    Kangnam_University!
+                                </span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="chat__column">
-                        <span class="chat__timestamp">Yesterday</span>
+                        <div class="friend__column">
+                            <span class="chat__timestamp">
+                                March 8
+                            </span>
+                        </div>
                     </div>
                 </a>
             </li>
@@ -62,23 +70,24 @@
 
     <nav class="nav">
         <ui class="nav__list">
-            <li class="nave__list-item">
-                <a href="friends.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="friends.html" class="nav__list-link">
                     <i class="far fa-user"></i>
                 </a>
             </li>
-            <li class="nave__list-item">
-                <a href="index.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
                     <i class="fas fa-comment"></i>
                 </a>
             </li>
-            <li class="nave__list-item">
-                <a href="find.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="find.html" class="nav__list-link">
                     <i class="fas fa-search"></i>
                 </a>
             </li>
-            <li class="nave__list-item">
-                <a href="more.html" class="nave__list-link">
+            <li class="nav__list-item">
+                <a href="more.html" class="nav__list-link">
                     <i class="fas fa-ellipsis-h"></i>
                 </a>
             </li>
