--- a/find.html
+++ b/find.html
@@ -121,6 +121,9 @@
             </li>
         </ui>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small!</span>
+    </div>
 </body>
 
 </html>
