--- a/more.html
+++ b/more.html
@@ -93,7 +93,7 @@
             <ul class="more__suggestions-list">
                 <li class="more__suggestion suggestion">
                     <span class="suggestion__icon">
-                        <i class="fas fa-quote-right fa-2x"></i>
+                        <i class="fas fa-quote-right"></i>
                     </span>
                     <span class="suggestion__title">Kakao Story</span>
                 </li>
@@ -136,6 +136,9 @@
             </li>
         </ui>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small!</span>
+    </div>
 </body>
 
 </html>
