--- a/settings.html
+++ b/settings.html
@@ -30,7 +30,7 @@
             <a href="more.html" class="header__back-btn">
                 <i class="fas fa-arrow-left"></i>
             </a>
-            <h1 class="header_title">Settings</h1>
+            <h1 class="header__title">Settings</h1>
         </div>
         <div class="header__header-column">
             <span class="header__icon">
@@ -39,7 +39,7 @@
         </div>
     </header>
     <main class="settings">
-        <section class="sttings__sections">
+        <section class="settings__sections">
             <ul class="setiings__list">
                 <li class="settings__setting">
                     <span class="settings__icon">
@@ -68,6 +68,40 @@
             </ul>
         </section>
     </main>
+
+    <main class="settings">
+        <section class="settings__sections">
+            <ul class="setiings__list">
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="fas fa-lock"></i>
+                    </span>
+                    <span class="settings__title">
+                        Privacy
+                    </span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="far fa-bell"></i>
+                    </span>
+                    <span class="settings__title">
+                        Notifications
+                    </span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="far fa-user"></i>
+                    </span>
+                    <span class="settings__title">
+                        Friends
+                    </span>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small!</span>
+    </div>
 </body>
 
 </html>
