--- a/chat.html
+++ b/chat.html
@@ -98,7 +98,7 @@
             </span>
         </div>
         <div class="bigScreen">
-            <span class="bigScreen__text">Please make your screen small!</span>
+            <span class="bigScreen__text">Please make your screen small!*^^*</span>
         </div>
 </body>
 
