--- a/find.html
+++ b/find.html
@@ -122,7 +122,7 @@
         </ui>
     </nav>
     <div class="bigScreen">
-        <span class="bigScreen__text">Please make your screen small!</span>
+        <span class="bigScreen__text">Please make your screen small!*^^*</span>
     </div>
 </body>
 
