--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </ui>
     </nav>
     <div class="bigScreen">
-        <span class="bigScreen__text">Please make your screen small!</span>
+        <span class="bigScreen__text">Please make your screen small!*^^*</span>
     </div>
 </body>
 
